# stubFileNotFound

./: .editorconfig  .gitignore  .isort.cfg  .ruff.toml  README.md  development.md  pyproject.toml  pyrefly.toml  roboshed.cmd  ruff.toml  stubdefaulterInSeries.cmd
development/: development.md  third_party_packages.md
src/stubFileNotFound/: __init__.py  missing2Any.py  missing2AnyTransformers.py
stubFileNotFound/: Z0Z_format.py  _theSSOT.py  convertFilesTOutf8.cmd  fileDiscovery.py  generateComparisons.py  generate_stubs.py  mergeFontsTypecheckHarness.py  missing2Any.py  missing2AnyStart.py  missing2AnyTransformers.py  removeDocstrings.py  ruff_isort.cmd
stubs/: _cffi_backend.pyi  autoflake.pyi  soundfile.pyi  u.py  u312.py
stubs/Ast_Stubgen/: __init__.pyi  stubgen.pyi
stubs/PoPE_pytorch/: __init__.pyi  attention.pyi  pope.pyi  pope_nd.pyi  triton_pope.pyi  triton_pope_flash_attn.pyi
stubs/_soundfile/: _soundfile.pyi
stubs/accelerate/: accelerator.pyi  big_modeling.pyi  data_loader.pyi  hooks.pyi  local_sgd.pyi  logging.pyi  parallelism_config.pyi  state.pyi  tracking.pyi
stubs/afdko/: agd.pyi  buildcff2vf.pyi  buildmasterotfs.pyi  checkoutlinesufo.pyi  comparefamily.pyi  convertfonttocid.pyi  fdkutils.pyi  makeinstancesufo.pyi  makeotf.pyi  otc2otf.pyi  otf2otc.pyi  otf2ttf.pyi  proofpdf.pyi  ttfcomponentizer.pyi  ttfdecomponentizer.pyi  ttxn.pyi  ufotools.pyi
stubs/axisregistry/: __init__.pyi  axes_pb2.pyi
stubs/babelfont/: Anchor.pyi  Axis.pyi  BaseObject.pyi  Component.pyi  Features.pyi  Font.pyi  Glyph.pyi  Guide.pyi  Instance.pyi  Layer.pyi  Master.pyi  Names.pyi  Node.pyi  Shape.pyi  __init__.pyi  __main__.pyi
stubs/cffconvert/: __init__.pyi  citation.pyi  root.pyi
stubs/cffi/: _cffi_backend.pyi  api.pyi
stubs/cffsubr/: __init__.pyi  __main__.pyi
stubs/compreffor/: __init__.pyi  __main__.pyi  cxxCompressor.pyi  pyCompressor.pyi
stubs/cytoolz/: __init__.pyi  _signatures.pyi  dicttoolz.pyi  itertoolz.pyi  recipes.pyi  utils.pyi
stubs/defcon/: __init__.pyi  errors.pyi
stubs/diskcache/: __init__.pyi  core.pyi  djangocache.pyi  fanout.pyi  persistent.pyi  recipes.pyi
stubs/ffmpeg/: __init__.pyi  _ffmpeg.pyi  _filters.pyi  _probe.pyi  _run.pyi  _utils.pyi  _view.pyi  dag.pyi  nodes.pyi
stubs/flake8-builtins/: flake8_builtins.pyi
stubs/fontFeatures/: __init__.pyi  utils.pyi
stubs/fontMath/: __init__.pyi  _version.pyi  mathFunctions.pyi  mathGlyph.pyi  mathGuideline.pyi  mathInfo.pyi  mathKerning.pyi  mathTransform.pyi
stubs/fontParts/: ui.pyi  world.pyi
stubs/fontPens/: angledMarginPen.pyi  digestPointPen.pyi  flattenPen.pyi  guessSmoothPointPen.pyi  marginPen.pyi  penTools.pyi  printPen.pyi  printPointPen.pyi  recordingPointPen.pyi  thresholdPen.pyi  thresholdPointPen.pyi  transformPointPen.pyi
stubs/fontTools/: __init__.pyi  afmLib.pyi  agl.pyi  annotations.pyi  fontBuilder.pyi  help.pyi  tfmLib.pyi  ttx.pyi  unicode.pyi
stubs/fontmake/: __init__.pyi  __main__.pyi  _version.pyi  compatibility.pyi  errors.pyi  font_project.pyi  font_project.pyi.bak  instantiator.pyi  ttfautohint.pyi
stubs/fontv/: commandlines.pyi  exceptions.pyi  libfv.pyi  settings.pyi  utilities.pyi
stubs/funcy/: __init__.pyi  _inspect.pyi  calc.pyi  colls.pyi  compat.pyi  debug.pyi  decorators.pyi  flow.pyi  funcmakers.pyi  funcolls.pyi  funcs.pyi  objects.pyi  primitives.pyi  py2.pyi  py3.pyi  seqs.pyi  strings.pyi  tree.pyi  types.pyi
stubs/future/: __init__.pyi
stubs/gflanguages/: __init__.pyi  languages_public_pb2.pyi  udhr.pyi
stubs/gfsubsets/: __init__.pyi  subsets.pyi
stubs/gftools/: constants.pyi  fix.pyi  fonts_public_pb2.pyi  stat.pyi  utils.pyi
stubs/glyphsLib/: __init__.pyi  __main__.pyi  _version.pyi  classes.pyi  cli.pyi  glyphdata.pyi  interpolation.pyi  parser.pyi  pens.pyi  types.pyi  util.pyi  writer.pyi
stubs/glyphsets/: __init__.pyi  __main__.pyi  helpers.pyi
stubs/hyper_connections/: __init__.pyi  hyper_connections.pyi  hyper_connections_channel_first.pyi  hyper_connections_with_multi_branch_inputs.pyi  hyper_connections_with_multi_input_streams.pyi  mHCv2.pyi  manifold_constrained_hyper_connections.pyi  residuals.pyi  triton_sinkhorn.pyi  vit.pyi
stubs/inifile/: inifile.pyi
stubs/kernFeatureWriter/: __init__.pyi
stubs/libsass/: sass.pyi
stubs/llvmlite/: __init__.pyi
stubs/markFeatureWriter/: __init__.pyi
stubs/msgpack/: ext.pyi  (+3 more)
(+4316 files in other folders)
