[project]
name = "stubFileNotFound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "CC-BY-NC-4.0"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/stubFileNotFound", Repository = "https://github.com/hunterhogan/stubFileNotFound.git" }
requires-python = ">=3.14"
dependencies = [
    "charset-normalizer>=3.4.4",
    "fonttools>=4.61.1",
    "hunterMakesPy>=0.4.0",
    "libcst>=1.8.6",
    "monkeytype>=23.3.0",
    "mypy>=1.19.1",
    "odfpy>=1.4.1",
    "pandas>=3.0.0",
    "pyright>=1.1.408",
    "pyupgrade>=3.21.2",
    "pyxlsb>=1.0.10",
    "resampy>=0.4.3",
    "ruff>=0.15.0",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
    "sqlalchemy>=2.0.46",
    "stub-generator>=1.2.2",
    "stubdefaulter",
    "typeshed-client>=2.8.2",
    "xarray>=2026.1.0",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
stubdefaulter = { git = "https://github.com/JelleZijlstra/stubdefaulter.git" }
